# FP-Template

./: .env.example  .gitignore  Makefile  README.md  WARP.md  pyproject.toml  readme.md
src/ai/: ai_deepseek.py
src/example_scripts/: data_loader.py  plot_generator.py  statistical_analysis.py
src/scripts/: deepseek_basic.py  deepseek_chat.py  main.py
tex/: main.tex  references.bib
