[project]
name = "Lab-Protocol-Template"
version = "0.1.0"
description = "Protocols and scripts for the lab"
authors = [
    { name = "Javier Bellido Roldan", email = "bellidoroj98@zedat.fu-berlin.de" },
    { name = "Cem", email = "cembo@membo.com" },
    { name = "Cem", email = "cembo@membo.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.0",
    "scipy>=1.16.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = ["black>=25.9.0", "mypy>=1.18.2", "ruff>=0.14.0"]
